homepage fixed on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -27,31 +27,31 @@
 }
 
 .headshot {
-    @apply rounded-full shadow-xl md:w-64 md:h-64 w-28 h-28 object-contain ml-10;
+    @apply rounded-full shadow-xl md:w-64 md:h-64 w-28 h-28 object-contain md:ml-10;
 }
 
 .Intro{
-    @apply sm:w-4/5 w-2/5 bg-[#384B70] pb-7 pt-5 rounded-3xl mt-10 flex sm:flex-row flex-col justify-center shadow-lg
+    @apply sm:w-4/5 w-2/5 bg-[#384B70] pb-7 pt-5 rounded-3xl mt-10 flex flex-col md:flex-row items-center justify-center shadow-lg
 }
 
 .Name {
-    @apply font-bold text-5xl text-[#FCFAEE] mt-14 pl-16
+    @apply font-bold text-5xl text-[#FCFAEE] mt-3 md:mt-14 md:pl-16 px-8
 }
 
 .IntroDesc{
-    @apply text-[#FCFAEE] mt-7 pl-16 font-semibold text-lg pr-10
+    @apply text-[#FCFAEE] mt-3 md:mt-7 md:pl-16 font-semibold text-lg md:pr-10 px-8
 }
 
 .Card {
-    @apply w-11/12 md:w-2/5 bg-[#384B70] rounded-3xl text-[#FCFAEE] font-semibold text-lg pb-5 shadow shadow-xl
+    @apply w-11/12 md:w-4/5 bg-[#384B70] rounded-3xl text-[#FCFAEE] font-semibold text-lg pb-5 shadow-xl
 }
 
 .CardTitle{
-    @apply font-bold text-5xl text-[#FCFAEE] mt-3 pl-10 
+    @apply font-bold text-5xl text-[#FCFAEE] mt-3 pl-7 md:pl-10 
 }
 
 .CardDesc{
-    @apply text-[#FCFAEE] mt-7 pl-10 font-semibold text-lg pr-10
+    @apply text-[#FCFAEE] mt-7 pl-7 md:pl-10 font-semibold text-lg pr-7 md:pr-10
 }
 
 .Tag{
